--- a/views/admin/rename-unit.ejs
+++ b/views/admin/rename-unit.ejs
@@ -1,21 +1,15 @@
-<div class="login-container"><main>
+<div class="editor-container"><main>
 
-    <a href="/">&larr; Home</a>
-
-    <h1>Admin Page</h1>
-    <h2>Login</h2>
+    <a href="/dashboard">&larr; Back</a>
     
-    <form action="/login" method="POST">
+    <h2>Rename Unit</h2>
 
-        <label for="username">Username</label><br>
-        <input class="text-bar" type="text" placeholder="Enter Username" name="username"><br>
+    <form action="/unit/rename/<%= unit._id %>?_method=PATCH" method="POST">
 
-        <br>
+        <label for="title">Title</label><br>
+        <textarea name="title" cols="30" rows="1"><%= unit.title %></textarea>
 
-        <label for="password">Password</label><br>
-        <input class="text-bar" type="password" placeholder="Enter Password" name="password"><br>
-
-        <input class="submit-button" type="submit" value="Login">
+        <input class="submit-button" type="submit" value="Rename">
 
     </form>
 
@@ -23,7 +17,7 @@
 
 <style>
 
-    .login-container {
+    .editor-container {
         width: 100%;
         height: 100%;
         display: flex;
@@ -40,19 +34,15 @@
         flex-direction: column;
     }
 
-    h1 {
-        text-align: center;
-        margin-bottom: 24px;
-    }
-
     h2 {
+        margin-top: 10px;
         margin-bottom: 20px;
     }
 
     a { color: black; }
     a:hover { text-decoration: underline; }
 
-    label, .text-bar, .submit-button {
+    label, textarea, .submit-button {
         font-family: 'DM-Sans';
         font-weight: 400;
         font-variation-settings: 'opsz' 16;
@@ -62,7 +52,7 @@
         font-size: 18px;
     }
 
-    .text-bar {
+    textarea {
         border-radius: 4px;
         border: 2px solid black;
 
