--- a/views/public/index.ejs
+++ b/views/public/index.ejs
@@ -1,9 +1,61 @@
-<main>
-    <h1>Welcome to Varanomics</h1>
+<div class="home-container"><main>
+
+    <h1>Welcome to Varanomix</h1>
     <p>A free and open repository of study notes for IB Business Management and Economics.</p>
 
-    <div class="home-nav-container">
-        <a href="/business-management">Business Management</a>
-        <a href="/economics">Economics</a>
+    <div class="home-nav-wrapper">
+        <a class="link-button" href="/business-management">Business Management</a><br>
+        <a class="link-button" href="/economics">Economics</a>
     </div>
-</main>
+
+</main></div>
+
+<style>
+
+    .home-container {
+        width: 100%;
+        height: 100%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+
+    main {
+        width: 600px;
+        padding: 80px;
+        margin: auto;
+
+        display: flex;
+        flex-direction: column;
+    }
+
+    h1 {
+        text-align: center;
+        margin-bottom: 24px;
+    }
+
+    .home-nav-wrapper {
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+    }
+
+    .link-button {
+        font-family: 'DM-Sans';
+        font-weight: 400;
+        font-variation-settings: 'opsz' 16;
+        font-size: 18px;
+        text-align: center;
+
+        border-radius: 5px;
+        padding: 9px;
+        box-sizing: border-box;
+        width: 100%;
+
+        background-color: black;
+        color: whitesmoke;
+
+        margin-top: 26px;
+    }
+    
+</style>
