--- a/views/admin/index.ejs
+++ b/views/admin/index.ejs
@@ -84,4 +84,9 @@
         margin-top: 26px;
     }
 
+    .submit-button:hover {
+        color: black;
+        background-color: #c0cad6;
+    }
+
 </style>
