--- a/views/public/index.ejs
+++ b/views/public/index.ejs
@@ -57,5 +57,10 @@
 
         margin-top: 26px;
     }
+
+    .link-button:hover {
+        color: black;
+        background-color: #c0cad6;
+    }
     
 </style>
