--- a/views/public/economics.ejs
+++ b/views/public/economics.ejs
@@ -81,6 +81,8 @@
         content: counter(unit) "." counter(chapter) " - ";
     }
 
+    .chapters li { padding: 9px 0; }
+
     a { color: black; }
     a:hover { text-decoration: underline; }
 
